# MyGameServer

./: DEPLOYMENT_GUIDE.md  README.md  build.bat  build.sh  deploy.yml  docker-compose-no-mysql.yml  docker-compose.prod.yml  docker-compose.yml  docker命令.txt
.github/workflows/: docker-image.yml
backend/: CMakeLists.txt  Dockerfile
backend/src/: Database.cpp  Database.h  PacketProcessor.cpp  PacketProcessor.h  UdpServer.cpp  UdpServer.h  User.cpp  User.h  UserController.cpp  UserController.h  UserService.cpp  UserService.h  main.cpp
backend/src/handler/: InputHandler.h
backend/src/udp/: UdpPacket.cpp  UdpPacket.h  UdpPacketQueue.h  UdpReceiver.cpp  UdpReceiver.h
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
mysql/: init.sql
nginx/: nginx.conf  nginx.prod.conf
nginx/ssl/: DISABLE_HTTPS.md  README.md
scripts/: setup-ssl.sh
